Redesign portfolio index

--- a/content/case_studies/designing-for-emerging-technology.mdx
+++ b/content/case_studies/designing-for-emerging-technology.mdx
@@ -1,11 +1,11 @@
 ---
 order: 3
-tag: "Innovation"
+tag: "Prototyping"
 title: "Designing for Emerging Technology"
 summary: "Through a series of self-initiated projects, I’ve explored the future of UI beyond the screen, while learning AR, 3D modeling, and interaction design skills."
-hero: "/portfolio-assets/innovation-hero.jpg"
-thumbnail: "/portfolio-assets/innovation-thumbnail.jpg"
-og: "/portfolio-assets/innovation-og.jpg"
+hero: "/portfolio-assets/prototyping-hero.jpg"
+thumbnail: "/portfolio-assets/thumbnail-prototyping.png"
+og: "/portfolio-assets/prototyping-og.jpg"
 unlisted: false
 ---
 
@@ -16,7 +16,7 @@ While I'm a firm believer in the double diamond, in problem definition, in conti
 </div>
 
 <CaseStudyChapter
-src="/portfolio-assets/innovation-1.mp4"
+src="/portfolio-assets/prototyping-1.mp4"
 video
 alt=""
 >
@@ -25,7 +25,7 @@ What if you could see how plants would look over time directly in your garden? T
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/innovation-2.mp4"
+src="/portfolio-assets/prototyping-2.mp4"
 video
 alt=""
 >
@@ -34,7 +34,7 @@ What if your recipe book made recommendations based on the weather, then ordered
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/innovation-3.mp4"
+src="/portfolio-assets/prototyping-3.mp4"
 video
 alt=""
 >
