--- a/content/case_studies/designing-for-good.mdx
+++ b/content/case_studies/designing-for-good.mdx
@@ -1,11 +1,11 @@
 ---
 order: 2
-tag: "Prototyping"
+tag: "Product Design"
 title: "Designing for Good"
 summary: "How do you make the experience of giving money, food, or aid to a stranger a more effective experience for everyone involved? A Simple Focus client who had worked with Memphis’ unhoused population for years asked us to help him solve that problem."
-hero: "/portfolio-assets/hlpr-hero.jpg"
-thumbnail: "/portfolio-assets/hlpr-thumbnail.jpg"
-og: "/portfolio-assets/hlpr-og.jpg"
+hero: "/portfolio-assets/product-design-hero.jpg"
+thumbnail: "/portfolio-assets/thumbnail-product-design.png"
+og: "/portfolio-assets/product-design-og.jpg"
 unlisted: false
 related: "Smart Dog Collar UI"
 ---
@@ -13,11 +13,11 @@ related: "Smart Dog Collar UI"
 <CaseStudyProblemStatement>
 ## When you’re faced with someone asking for help, the encounter can be stressful. You want to provide assistance, but a few dollars cash isn’t always the most effective solution.
 
-The problems facing our our asset-deprived population are complex, and solving them is politically fraught. We narrowed our focus to the precise moment that you, the “HLPR,” choose to give aid to someone on the street. Using your phone, you can tap into a network of rideshare apps, food delivery services, and local shelters to provide more worthwhile support in just a few taps.
+The problems facing our our asset-deprived population are complex, and solving them is politically fraught. We narrowed our focus to the precise moment that you, the “product-design,” choose to give aid to someone on the street. Using your phone, you can tap into a network of rideshare apps, food delivery services, and local shelters to provide more worthwhile support in just a few taps.
 </CaseStudyProblemStatement>
 
 <CaseStudyChapter
-src="/portfolio-assets/hlpr-1.jpg"
+src="/portfolio-assets/product-design-1.jpg"
 alt="A user flow diagram."
 >
 ## Defining the Happy Path
@@ -25,7 +25,7 @@ To sell this vision to investors, non-profit partners, and city leaders, we deci
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/hlpr-2.jpg"
+src="/portfolio-assets/product-design-2.jpg"
 alt="A photo of paper wireframes on a desk."
 layout="reverse"
 >
@@ -34,7 +34,7 @@ From there, we sketched out every screen that would be needed for the prototype,
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/hlpr-3.jpg"
+src="/portfolio-assets/product-design-3.jpg"
 alt="A collage of the design elements of helper."
 >
 ## Creating the Design Language
@@ -42,7 +42,7 @@ In this case, the job of the design was to make the idea feel as real as possibl
 </CaseStudyChapter>
 
 <CaseStudyChapter
-src="/portfolio-assets/hlpr-4.mp4"
+src="/portfolio-assets/product-design-4.mp4"
 video
 alt=""
 layout="vertical"
