--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -4,7 +4,7 @@ tag: "Design Systems"
 title: "Designing for Scale"
 summary: "In my first year at OfficeSpace Software, I led multiple designers and developers in the process of building a design system where none existed, unlocking new sales segments, tripling development velocity, and setting up a bright future for the 15-year-old product. Meet Mariposa."
 hero: "/portfolio-assets/design-systems-hero.jpg"
-thumbnail: "/portfolio-assets/design-systems-thumbnail.jpg"
+thumbnail: "/portfolio-assets/thumbnail-design-systems.png"
 og: "/portfolio-assets/design-systems-og.jpg"
 unlisted: false
 related: "Room Booking Overview"
