Add Employee Dashboard case study

--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -7,7 +7,7 @@ hero: "/portfolio-assets/design-systems-hero.jpg"
 thumbnail: "/portfolio-assets/thumbnail-design-systems.png"
 og: "/portfolio-assets/design-systems-og.jpg"
 unlisted: false
-related: "Room Booking Overview"
+related: "Employee Dashboard"
 ---
 
 <CaseStudyProblemStatement>
