Fix autoplaying video on new case study

--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -35,10 +35,12 @@ Knowing the full redesign was going to be a huge commitment, we decided to de-ri
 </div>
 
 <div>
+  <figure className="not-prose">
     <video
         width="1000"
         height="500"
         preload="metadata"
+        playsInline
         autoPlay="autoplay"
         muted
         loop
@@ -46,6 +48,7 @@ Knowing the full redesign was going to be a huge commitment, we decided to de-ri
         <source src="/portfolio-assets/employee-dashboard-1.mp4" type="video/mp4" />
         Your browser does not support the video tag.
     </video>
+  </figure>
 </div>
 
 <div className="max-w-2xl">
