--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -10,10 +10,10 @@ unlisted: false
 related: "Employee Dashboard"
 ---
 
-<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-20 items-center max-w-none py-12 2xl:py-0">
+<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none py-12 2xl:py-0">
 
 
-<div>
+<div className="py-0 2xl:py-12 2xl:pb-24">
 <p className="h4 mb-2 mt-0!">The Problem</p>
 <div className="flex flex-col max-w-2xl lg:max-w-none lg:flex-row lg:space-x-20">
 <div className="lg:w-1/2">
