Add quality prop on key portfolio images

--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -34,7 +34,7 @@ Following atomic design standards, I started by defining our tokens: typography,
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/design-systems-1.png" alt="The atomic tokens that make up the Mariposa design system." width={1000} height={500} />
+<Image src="/portfolio-assets/design-systems-1.png" alt="The atomic tokens that make up the Mariposa design system." width={1000} height={500} quality="100" />
 </figure>
 </div>
 
@@ -49,7 +49,7 @@ Around the same time, a new engineering team had been formed to build the framew
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/design-systems-2.png" alt="A view comparing the similar structure of the same component in Figma and React." width={1000} height={500} />
+<Image src="/portfolio-assets/design-systems-2.png" alt="A view comparing the similar structure of the same component in Figma and React." width={1000} height={500} quality="100" />
 <figcaption>
 I made sure that the components in Figma shared the same property structure as their counterparts in code, which means that any engineer can look at a Figma file and configure the components it’s built from with ease.
 </figcaption>
@@ -69,7 +69,7 @@ With that in mind, I created documentation for every component, as well as stand
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/design-systems-3.jpg" alt="A screenshot of the employee dashboard built with Mariposa components." width={1000} height={700} />
+<Image src="/portfolio-assets/design-systems-3.jpg" alt="A screenshot of the employee dashboard built with Mariposa components." width={1000} height={700} quality="100" />
 <figcaption>
 The new employee dashboard was the realization of months of effort building Mariposa.
 </figcaption>
