--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -75,7 +75,7 @@ The new design centers around a more user-centric concept: Equip the employee wi
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/employee-dashboard-2.jpg" alt="A screenshot of the new employee dashboard." width={1000} height={500} />
+<Image src="/portfolio-assets/employee-dashboard-2.jpg" alt="A screenshot of the new employee dashboard." width={1000} height={500} quality="100" />
 <figcaption>
   The new card-based layout presents multiple distinct features without feeling too busy or overwhelming. In testing, 87%+ rated this design positively after their initial encounter.
 </figcaption>
@@ -90,7 +90,7 @@ Additional components include workplace announcements, quick action buttons, and
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/employee-dashboard-3.jpg" alt="A screenshot of the new employee dashboard on mobile." width={1000} height={700} />
+<Image src="/portfolio-assets/employee-dashboard-3.jpg" alt="A screenshot of the new employee dashboard on mobile." width={1000} height={700} quality="100" />
 <figcaption>
   Employees frequently book desks while while commuting to the office, so responsiveness was imperative.
 </figcaption>
@@ -106,7 +106,7 @@ The new design language has set the standard for how the growing OfficeSpace pla
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/employee-dashboard-4.png" alt="A collage showing the design tokens that make up the new design system." width={1000} height={666} />
+<Image src="/portfolio-assets/employee-dashboard-4.png" alt="A collage showing the design tokens that make up the new design system." width={1000} height={666} quality="100" />
 </figure>
 </div>
 
