Simplify case study templating

--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -10,21 +10,13 @@ unlisted: true
 related: "Designing for Good"
 ---
 
-<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-20 items-center max-w-none py-12 2xl:py-0">
+<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none py-12 2xl:py-0">
 
-<div>
-<p className="h4 mb-2 mt-0!">The Problem</p>
-<div className="flex flex-col max-w-2xl lg:max-w-none lg:flex-row lg:space-x-20">
-<div className="lg:w-1/2">
-<h2 className="mt-0!">Employees who logged into OfficeSpace were met with an unintuitive experience and inadequate tools for planning their workday.</h2>
-</div>
-<div className="lg:w-1/2">
-<p className="mt-0!">In the time since the employee landing page had last been updated—over eight years prior—it had become outdated and unable to adapt to the variety of workflows needed to serve different visitors. And with the trending consolidation of WEX/IWMS tools, our competitors had begun offering more modern, robust solutions.</p>
-
-<p>Our metrics showed a dwindling number of new users converting to MAUs and an uptick in missed sales opportunities that could be tied to this competitive gap.</p>
-</div>
-</div>
-</div>
+<ProblemStatement
+    label
+    headline="Employees who logged into OfficeSpace were met with an unintuitive experience and inadequate tools for planning their workday."
+    content="The company was on an ambitious growth plan to expand its product line, but designers and developers were working without the infrastructure needed to execute this strategy. Meanwhile, users were encountering more and more inconsistencies and accessibility failures in our UI, which we had no way to address globally. Our metrics showed a dwindling number of new users converting to MAUs and an uptick in missed sales opportunities tied to this competitive gap."
+/>
 
 
 <div className="max-w-2xl">
