--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -13,17 +13,11 @@ related: "Employee Dashboard"
 <div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none py-12 2xl:py-0">
 
 
-<div className="py-0 2xl:py-12 2xl:pb-24">
-<p className="h4 mb-2 mt-0!">The Problem</p>
-<div className="flex flex-col max-w-2xl lg:max-w-none lg:flex-row lg:space-x-20">
-<div className="lg:w-1/2">
-<h2 className="mt-0!">Without a centralized Figma library or front-end framework, the user experience of OfficeSpace was fragmenting and process inefficiencies were holding us back.</h2>
-</div>
-<div className="lg:w-1/2">
-<p className="mt-0!">The company was on an ambitious growth plan to expand its product line, but designers and developers were working without the infrastructure needed to execute this strategy. Meanwhile, users were encountering more and more inconsistencies and accessibility failures in our UI, which we had no way to address globally.</p>
-</div>
-</div>
-</div>
+<ProblemStatement
+    eyebrow="The Problem"
+    headline="Without a centralized Figma library or front-end framework, the user experience of OfficeSpace was fragmenting and process inefficiencies were holding us back."
+    content="The company was on an ambitious growth plan to expand its product line, but designers and developers were working without the infrastructure needed to execute this strategy. Meanwhile, users were encountering more and more inconsistencies and accessibility failures in our UI, which we had no way to address globally."
+/>
 
 <div className="max-w-2xl">
 ## Fortifying the Foundation
