--- a/content/case_studies/smart-dog-collar.mdx
+++ b/content/case_studies/smart-dog-collar.mdx
@@ -10,50 +10,65 @@ unlisted: true
 related: "Designing for Emerging Technology"
 ---
 
-<CaseStudyProblemStatement>
-## Dogs bark. And when they bark for hours at a time while you’re away from home, you need to know.
+<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none py-12 2xl:py-0">
 
-The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves.
-</CaseStudyProblemStatement>
+<ProblemStatement
+    label
+    headline="Dogs bark. And when they bark for hours at a time while you’re away from home, you need to know."
+    content="The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves.
+"
+/>
 
-<CaseStudyChapter
-src="/portfolio-assets/smart-collar-1.jpg"
-alt="Illustrations of dogs barking."
->
+<div className="max-w-2xl">
 ## Building Empathy
 Our first stop was a visit to the client’s offices, where we could see the collar and even test the static effect on ourselves. We leaned heavily on their domain expertise, and they relied on our UX research to build confidence in our design decisions.
 
 It quickly became clear that the pets would be their own user persona for this project, just like the owners. (You’ve heard of B2B2C—this was B2C2P!)
 As our on-site went along, I found myself sketching illustrations that would end up in the app, wanting to avoid a UI that felt sterile.
-</CaseStudyChapter>
+</div>
 
-<CaseStudyChapter
-src="/portfolio-assets/smart-collar-2.jpg"
-alt="A wireframe with two approaches to onboarding."
-layout="reverse"
->
+<div className="text-center">
+<figure className="my-0! mx-auto max-w-[1000px]">
+<Image src="/portfolio-assets/smart-collar-1.jpg" alt="Illustrations of dogs barking." width={800} height={600} quality="100" />
+</figure>
+</div>
+
+<div className="max-w-2xl">
 ## Testing Two Approaches
 As I started roughing out wireframes, we soon keyed in on the setup screens as being an inflection point in the UX and a prime candidate for testing.
 The collar offered multiple training modes, and we wanted to find the best way to explain all three options while also providing a guided setup experience.
 
 How do you balance making a gentle recommendation with ensuring the user is fully informed? Which approach would instill the most confidence?
-</CaseStudyChapter>
+</div>
 
-<CaseStudyCallout headline="Applying Our Learnings">
+<div className="text-center">
+<figure className="my-0! mx-auto max-w-[1000px]">
+<Image src="/portfolio-assets/smart-collar-2.jpg" alt="A wireframe with two approaches to onboarding." width={800} height={600} quality="100" />
+</figure>
+</div>
+
+
+<Callout headline="Applying Our Learnings">
 As usual with UX research, we ended up learning a bit of what we expected and a bit of what we didn’t.
 
 We learned definitively that our best approach was to display all three setup options on equal terms; however, we also learned that our phrasing when describing each training method had to be clearer. Some were confused and said they couldn’t move forward without knowing exactly how the collar’s vibrations would affect their dog at different levels.
 
 This was definitely not an area where concision is king. In fact, we slowed down the setup experience and added (optional) in-depth explanations of each training method. This was part of our presentation to the client that outlined our hypothesis, test methodology, and analysis.
-</CaseStudyCallout>
+</Callout>
 
-<CaseStudyChapter
-src="/portfolio-assets/smart-collar-3.jpg"
-alt="Three screens from the Smart Dog Collar UI, showing charts of barks and illustrations of happy dogs."
-layout="vertical"
->
+
+<div className="max-w-2xl">
 ## Crafting an Expressive UI
 When the time came to move from wireframes to high fidelity, the client felt comfortable enough by now to trust us with updating and modernizing their existing design language. They wanted the app to feel slick and easy-to-use.
 
 Along with incorporating the illustrations I mentioned earlier, I made a point of orienting each screen around two principles: high clarity of information, and natural voice and tone. The goal was that the app would feel like a smart companion, proactively analyzing your pet’s behavior and guiding your decision-making.
-</CaseStudyChapter>
+</div>
+
+
+<div className="text-center">
+<figure className="my-0! mx-auto max-w-[1000px]">
+<Image src="/portfolio-assets/smart-collar-3.jpg" alt="A wireframe with two approaches to onboarding." width={1000} height={750} quality="100" />
+</figure>
+</div>
+
+</div>
