Update imagery and layout of case studies

--- a/content/case_studies/designing-for-good.mdx
+++ b/content/case_studies/designing-for-good.mdx
@@ -25,7 +25,7 @@ To sell this vision to investors, non-profit partners, and city leaders, we deci
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/product-design-1.jpg" alt="A user flow diagram." width={800} height={600} quality="100" />
+<Image src="/portfolio-assets/product-design-1.png" alt="A user flow diagram." width={1000} height={400} quality="100" />
 </figure>
 </div>
 
@@ -53,8 +53,8 @@ Finally, I used advanced prototyping tools to create animations, transitions, an
 <div>
   <figure className="not-prose">
     <video
-        width="1000"
-        height="750"
+        width="800"
+        height="600"
         preload="metadata"
         playsInline
         autoPlay="autoplay"
