--- a/content/case_studies/room-booking-overview.mdx
+++ b/content/case_studies/room-booking-overview.mdx
@@ -2,7 +2,7 @@
 order: 4
 tag: "Product Design"
 title: "Room Booking Overview"
-summary: "At OfficeSpace Software, I led the design of a new feature called Room Booking Overview, which gave Facility Mangers an all-new way to track their room bookings, optimize space capacity, and even move meetings with one click to accommodate their needs—all in an intuitive calendar interface."
+summary: "At OfficeSpace Software, I led the design of a new feature called Room Booking Overview, which gave Facility Managers an all-new way to track their room bookings, optimize space capacity, and even move meetings with one click to accommodate their needs—all in an intuitive calendar interface."
 hero: "/portfolio-assets/rbo-hero.jpg"
 thumbnail: ""
 og: "/portfolio-assets/rbo-og.jpg"
@@ -63,15 +63,23 @@ In the end, these interviews helped us ruthlessly prioritize which aspects were 
 - Meeting privacy settings would need to be taken into consideration. Even seeing the title or the participants might be too sensitive.
 </Callout>
 
+<div className="max-w-2xl">
+## Taking it to High Fidelity
+Armed with knowledge and a finalized MVP scope, I now felt comfortable creating high-fidelity designs. Some aspects could utilize existing components from our design system, but there were some interactions, such as the grid layout and timeline scrubber, that were unique to this page. For these new patterns, I borrowed from similar experiences in other products like project management software and even video editing tools.
+</div>
+
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/rbo-3.png" alt="Napkin sketch of the feature." width={1200} height={750} quality="100" />
+<Image src="/portfolio-assets/rbo-3.jpg" alt="Screenshot of the completed Room Booking Overview feature." width={1200} height={750} quality="100" />
 </figure>
 </div>
 
 <div className="max-w-2xl">
-## Taking it to High Fidelity
-Armed with knowledge and a finalized MVP scope, I now felt comfortable creating high-fidelity designs. Some aspects could utilize existing components from our design system, but there were some interactions, such as the grid layout and timeline scrubber, that were unique to this page. For these new patterns, I borrowed from similar experiences in other products like project management software and even video editing tools.
+## Preparing for a Smooth Handoff
+My core deliverable was a few dozen static screen mockups, but I know better than to think that will be enough for an efficient engineering handoff.
+My final Figma file also contained written documentation of our design decisions, links to videos I’d made for certain interactions, and specs for responsiveness, loading states, and screen transitions.
+
+All that meant that the build process was done in less than a quarter, with a minimal amount of back-and-forth and QA tickets.
 </div>
 
 <div>
@@ -92,21 +100,13 @@ Armed with knowledge and a finalized MVP scope, I now felt comfortable creating 
 </div>
 
 <div className="max-w-2xl">
-## Preparing for a Smooth Handoff
-My core deliverable was a few dozen static screen mockups, but I know better than to think that will be enough for an efficient engineering handoff.
-My final Figma file also contained written documentation of our design decisions, links to videos I’d made for certain interactions, and specs for responsiveness, loading states, and screen transitions.
-
-All that meant that the build process was done in less than a quarter, with a minimal amount of back-and-forth and QA tickets.
-</div>
-
-<div className="max-w-2xl">
-## Results
-<blockquote className="not-prose my-12 pl-4 lg:pl-8 border-l-4 border-l-yellow-200">
-      <span className="block mb-4 font-display text-xl lg:text-2xl font-bold">
-        "Ding ding ding!"
-      </span>
-      <cite className="text-neutral-500">"The exact reaction of one of our clients upon seeing the alpha version of this feature for the first time."</cite>
-    </blockquote>
+## Outcomes
+<blockquote className="not-prose my-12 pl-4 lg:pl-8 border-l-4 border-l-yellow-200 text-neutral-900! dark:text-neutral-300!">
+  <span className="block mb-4 font-display text-xl lg:text-2xl font-semibold">
+    "Ding ding ding!"
+  </span>
+  <cite className="leading-tight! not-italic! text-base"><p>The exact reaction of one of our clients upon seeing the alpha version of this feature for the first time.</p></cite>
+</blockquote>
 We expected this feature to find a dedicated niche in our client base, and it did. Room Booking Overview was launched as an add-on purchase with an attach rate of 25%, exceeding our expectations and immediately driving revenue growth. Since launch, we’ve shipped additional follow-up improvements based on our initial user research, creating a small but ardent set of users whose return rate signals just how well we hit the mark.
 
 </div>
