--- a/content/case_studies/smart-dog-collar.mdx
+++ b/content/case_studies/smart-dog-collar.mdx
@@ -43,7 +43,7 @@ How do you balance making a gentle recommendation with ensuring the user is full
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/smart-collar-2.jpg" alt="A wireframe with two approaches to onboarding." width={800} height={600} quality="100" />
+<Image src="/portfolio-assets/smart-collar-2.png" alt="A wireframe with two approaches to onboarding." width={1000} height={750} quality="100" />
 </figure>
 </div>
 
@@ -67,7 +67,7 @@ Along with incorporating the illustrations I mentioned earlier, I made a point o
 
 <div className="text-center">
 <figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/smart-collar-3.jpg" alt="A wireframe with two approaches to onboarding." width={1000} height={750} quality="100" />
+<Image src="/portfolio-assets/smart-collar-3.jpg" alt="Screenshots of the final designs showing a dashboard that tracks bark events." width={1000} height={705} quality="100" />
 </figure>
 </div>
 
