--- a/content/case_studies/designing-for-emerging-technology.mdx
+++ b/content/case_studies/designing-for-emerging-technology.mdx
@@ -9,7 +9,7 @@ og: "/portfolio-assets/prototyping-og.jpg"
 unlisted: false
 ---
 
-<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none py-12 2xl:py-0">
+<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none pb-12 2xl:py-0">
 
 <div className="max-w-2xl">
 ## Concepts like these are born out of simple questions that start with two words: "What if?"
