--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -15,7 +15,7 @@ related: "Designing for Good"
 <ProblemStatement
     label
     headline="Employees who logged into OfficeSpace were met with an unintuitive experience and inadequate tools for planning their workday."
-    content="The company was on an ambitious growth plan to expand its product line, but designers and developers were working without the infrastructure needed to execute this strategy. Meanwhile, users were encountering more and more inconsistencies and accessibility failures in our UI, which we had no way to address globally. Our metrics showed a dwindling number of new users converting to MAUs and an uptick in missed sales opportunities tied to this competitive gap."
+    content="In the time since the employee landing page had last been updated—over eight years prior—it had become outdated and unable to adapt to the variety of workflows needed to serve different visitors. And with the trending consolidation of WEX/IWMS tools, our competitors had begun offering more modern, robust solutions. Our metrics showed a dwindling number of new users converting to MAUs, and an uptick in missed sales opportunities that could be tied to this competitive gap."
 />
 
 
